# OOPS22-read

./: CMakeLists.txt  readcin.cpp  readcinget.cpp  readcinread.cpp  readifstream.cpp  readread.cpp  readreadfile.cpp
